Correcting style on mobile.

--- a/client/src/components/Nav/style.css
+++ b/client/src/components/Nav/style.css
@@ -24,18 +24,13 @@
       font-size: 1.7rem;
     }
 
+    .reactNav .nav-wrapper {
+      padding-right: unset;
+      padding-left: unset;
+    }
+  
+
     .reactNav .bookLogo {
-      margin-top: 7px;
-    }
-  }
-
-  @media only screen and (max-width: 400px) {
-    .reactNav .brand-logo {
-      font-size: 1.2rem;
-    }
-
-    .reactNav .bookLogo { 
-      width: 30px;
-      margin-top: 12px;
+      display: none;
     }
   }
